Release 1.2-SNAPSHOT
* Fixed the \eval command aborting when it executes a command that
  causes a session switch, such as \session or \connect -n.
* Fixed "\connect -c" not finding classes that are specified in the
  ${classpath} jsqsh variable.

Release 1.1
* Changed several aspects of command line options:
     - All jsqsh options have a long form and a short form 
       (e.g. -h and --help).
     - You no longer need a space following an option (e.g. 
       "-U sa" and "-Usa" are equivalent).
     - Every jsqsh command accepts -h and --help to cause a usage
       of the command to be dumped.
     - Every jsqsh command accepts -g and --gui to cause its output
       to be sent to a graphical popup window.
     - The new help topic "options" discusses this.
* Added new display style "graphical" that will pop open a GUI window
  containing query results in a sortable graphical table.
* Added $window_size to control the size of the window in graphical
  display mode and $font to set the font that will be used.
* Added $nocount variable to turn off the display of rowcounts generated
  due to update/delete statements.
* Added \insert command, this displays the results of the current SQL
  query as INSERT statements or executes the INSERT statements in 
  another session.
* Added \select command to generate select statements and joins from
  table definitions.
* Added \create command to generate CREATE TABLE statement from a table
  definition.
* Added \diff command to compare results from SQL executed across 
  multiple session.
* Added \call command to execute a prepared statement. This command
  is primarily for debugging purposes.
* The \help command is now more organized.
* JSqsh is now better at determining if the session is interactive
  or non-interactive (i.e. if stdin has been redirected).
* Tab completion now recognizes the TSQL "use" statement.
* Display of "info" type SQLWarning's (e.g. the output from a "print"